--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,26 @@ body {
   background-color: black;
 }
 
+.container {
+  width: 80vmin;
+  height: 80vmin;
+}
+
+.scoreboard {
+  background-color: hsl(180, 1%, 28%);
+  color: white;
+  padding: 15px 30px 15px 30px;
+  display: flex;
+  justify-content: space-between;
+}
+
 .board {
+  width: 100%;
+  height: 100%;
   background-color: hsl(180, 1%, 16%);
-  width: 100vmin;
-  height: 100vmin;
   display: grid;
-  grid-template-rows: repeat(30, 1fr); /* BOARD_SIZE = 20 */
-  grid-template-columns: repeat(30, 1fr); /* BOARD_SIZE = 20 */
+  grid-template-rows: repeat(25, 1fr); /* BOARD_SIZE = 25 */
+  grid-template-columns: repeat(25, 1fr); /* BOARD_SIZE = 25 */
 }
 
 .snake {
